--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="wrap">
-		<th:block th:replace="thymeleaf/header_menu :: headerFragment"></th:block>
+		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap">
 			
 			<!-- 동양화거장 -->
@@ -194,7 +194,7 @@
 			
 		</div>
 		
-		<!-- <jsp:include page="/WEB-INF/views/fo/main/footer.jsp"></jsp:include> -->
+		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 		
 	</div>
 
