--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -1,7 +1,5 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE HTML>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
@@ -10,7 +8,7 @@
 
 <body>
 	<div class="wrap">
-		<th:block th:replace="thymeleaf/header_menu :: headerFragment"></th:block>
+		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap">
 		
 			<ul class="nav nav-pills ait-nav" id="pills-tab" role="tablist">
@@ -313,7 +311,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- <jsp:include page="/WEB-INF/views/fo/main/footer.jsp"></jsp:include> -->
+	<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 </div>
 
 <script type="text/javascript">
